--- a/ecotech2/src/main/resources/templates/RegistrarCliente.html
+++ b/ecotech2/src/main/resources/templates/RegistrarCliente.html
@@ -4,80 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <title>Registrar Cliente</title>
+    <link rel="stylesheet" href="../static/style.css">
+    <script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
+    <script src="../static/javascript.js"></script>
+    <link rel="shortcut icon" href="../static/img/icone.ico">
+    <title>Cadastrar</title>
 </head>
 <body>
     <header>
-        <img src="/img/echoTech2.png" id="logo">
-
-        <a href="#">
-             <img src="/img/profilePicture.png" id="profile">
-        </a>
-       
+        <a href="#">Home</a>
     </header>
     <main>
-        <div id="optionBar">
-             
-                <ul class="sideBar">
-                    <p>Estoque</p>
-                    <li><a href="#" class="botao">Registrar Produto</a></li>
-                    <li><a href="#" class="botao">Visualizar Estoque</a></li>
-                    <li><a href="#" class="botao">Historico de Venda</a></li>
-                    <p>Cliente</p>
-                    <li><a href="#" class="botaoAtivo">Gerenciar Cliente</a></li>
+        <br/><br/><br/>
+      <div class="regis_box">
+        <form onsubmit="return validarSenha()">
+            <h1>Cadastrar-se</h1>
+            <input type="text" required placeholder="Nome*" class="bordasSuaves">
+            <input type="text" required placeholder="Sobrenome*" class="bordasSuaves"><br/>
 
-                </ul>
+            <input type="text" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder="Cpf*" class="bordasSuaves" required>
+            <input type="text" pattern="\(\d{2}\) \d{4,5}-\d{4}" required placeholder="Telefone*" class="bordasSuaves"><br/>
 
-        </div>
+            <input type="date" required placeholder="data de nascimento*" class="bordasSuaves">
+            <input type="email" required placeholder="Email*" class="bordasSuaves"><br/>
 
-        
+            <input type="password" required placeholder="digite sua senha*" class="bordasSuaves" id="senha1">
+            <input type="password" required placeholder="repita sua senha*" class="bordasSuaves" id="senha2"><br/><br/>
 
-        <div id="conteudo"> 
-            <form action="#" method="POST">
-                <label for="nome">Nome:</label><br>
-                <input type="text" id="nome" class="textBox" name="nome" required><br><br>
-        
-                <label for="endereco_cep">Endereço/CEP:</label><br>
-                <input type="text" id="endereco_cep" class="textBox" name="endereco_cep" required><br><br>
-        
-                <label for="email">Email:</label><br>
-                <input type="email" id="email" class="textBox" name="email" required><br><br>
-        
+            <input type="submit" class="buttonColored" value="Cadastrar"><br/><br/>
+        </form>
+      </div>
+      
+      <br><br>
 
-               
-                    
-                   
-                        <label for="contato">Contato:</label><br>
-                        <input type="text" id="contato"  class="textBox" name="contato" required>
-            
-                    <br><br>
-                    
-                    <div>
-                        <label for="cpf">CPF:</label><br>
-                        <input type="text" id="cpf" class="textBox" name="cpf" required>
-                    <br><br>
-                   
-            
-                    
-                        <label for="data_nascimento">Data de Nascimento:</label><br>
-                        <input type="date" id="data_nascimento"  class="textBox" name="data_nascimento" required>
-                    <br><br>
-                    
-            
-                     
-                        <label for="id">ID:</label><br>
-                        <input type="text" id="id" class="textBox" name="id" readonly></div>
-                    <br><br><br>
-                    
-                
-        
-                    <input type="submit"  id="submit" value="Registrar Cliente">
-            </form>
-        </div>
+      <h2>Usamos seu cadastro de forma 100% segura para:</h2>
+      <br>
+      <div class="regis_infs">
+            <div class="regis_icon">
+                <i class="fa-regular fa-user"></i>
+                <p>Identificar seu perfil</p>
+            </div>
+
+            <div class="regis_icon">
+                <i class="fa-regular fa-bell"></i>
+                <p>Notificar sobre o andamento do seu pedido</p>
+            </div>
+
+            <div class="regis_icon">
+                <i class="fa-solid fa-clock-rotate-left"></i>
+                <p>Gerenciar seu histórico de compras</p>
+            </div>
+
+            <div class="regis_icon">
+                <i class="fa-regular fa-file"></i>
+                <p>Identificar seu perfil</p>
+            </div>
+      </div>
+
+
+      <br><br>
+      <br><br>
+
+
     </main>
     <footer>
-        abacaxi
+        
     </footer>
 </body>
 </html>
