--- a/ecotech2/src/main/resources/static/style.css
+++ b/ecotech2/src/main/resources/static/style.css
@@ -60,6 +60,15 @@ body{margin: 0; padding: 0; border: 0}
 
 h2{text-align: center; cursor:default}
 
+
+
+
+
+
+
+
+
+
 .regis_box{
     font-size: 120%;
 
@@ -100,11 +109,68 @@ h2{text-align: center; cursor:default}
 .regis_icon{transition: background-color 0.3s, color 0.3s;}
 .regis_icon:hover{background-color: #82AE64; color:aliceblue;  padding: 1%; font-size: 110%; border-radius: 11px; cursor:default}
 
+
+
+
+
+
+
+
+
+
+
 /*Tela do perfil do cliente*/
-#profilePicture{width: 40%; border-radius: 100%;}
-.profile_box{display: flex; flex-direction: row; }
-.profile_infs{width: 40%;}
-.profile_box div{width: 50%;}
+#profilePicture{width: 80%; border-radius: 100%;}
+.profile_box{display: flex; flex-direction: row; align-items: center; width: 70%;}
+.profile_box a{
+    display: block;
+    border-radius: 15px; 
+    padding: 5%; 
+    width: 100%; 
+     
+    border:none; 
+    font-size: 100%;
+    background-color: #92B560; 
+    color:aliceblue;
+
+    text-decoration: none;
+    margin-bottom: 1%;
+
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+#logOut{background-color: rgb(163, 163, 163);}
+
+.profile_box a:hover{
+    font-size: 120%;
+    text-decoration: underline;
+}
+
+.profile_infs{width: 40%; margin: 5%;}
+.profile_box div{width: 30%; padding: 2%;}
+#profile_infsBox{width: 50%; border-left: solid rgb(82, 82, 82); margin-left: 4%;}
+
+.profile_box p{
+    margin-bottom: 10px; 
+    border-radius: 10px; 
+    padding: 5%; 
+    width: 300%; 
+    background-color: rgb(236, 236, 236);}
+.profile_box h1{
+    margin-top: -10%;  
+   
+}
+
+
+
+
+
+
+
+
+
+
+
 
 /*Se for um dispositivo mobile*/
 @media(max-width: 634px){
@@ -126,4 +192,16 @@ h2{text-align: center; cursor:default}
     .regis_infs{margin: 0 auto; text-align: center; display: flex; flex-direction:row; gap: 5%; justify-content: space-around; width: 50%; flex-wrap: wrap;}
     .regis_infs i{ font-size: 100%; padding-top: 10%;}
     h2{margin: 10% 10% ;}
+
+
+
+    .profile_box{display: flex; flex-direction: column; align-items: center; width: 70%;}
+    #profile_infsBox{width: 100%; border-left: none; margin-left:0}
+    .profile_box p{
+        margin-bottom: 10px; 
+        border-radius: 10px; 
+        padding: 5%; 
+        width: 270%; 
+        background-color: rgb(236, 236, 236);}
+    #profile_infsBox h1{display: none;}
 }
