--- a/ecotech2/src/main/resources/templates/TelaPerfil.html
+++ b/ecotech2/src/main/resources/templates/TelaPerfil.html
@@ -34,18 +34,27 @@
     <main>
         <br><br>
         <div class="regis_box profile_box">
-            <div><img src="../static/img/profilePicture.png" id="profilePicture"></div>
             <div>
+                <img src="../static/img/profilePicture.png" id="profilePicture"><br><br><br>
+                <a href="#"> &nbsp Editar perfil&nbsp</a><br>
+                <a href="#">Alterar Senha</a><br>
+                <a href="#" id="logOut">&nbsp&nbsp&nbsp&nbsp LogOut &nbsp&nbsp&nbsp&nbsp</a><br>
+            </div>
+            <div id="profile_infsBox"> 
                 <h1>Seu perfil</h1>
                 <div class="profile_infs">
-                    <p>Nome</p>
-                    <p>Endereço</p>
-                    <p>Cpf</p>
-                    <p>telefone</p>
+                    <p>Nome: Mariana Fernandes</p>
+                    <p>Endereço: Rua das Flores 321</p>
+                    <p>Cpf: xxx.xxx.xxx-xx</p> 
+                    <p>Cep: 12344321</p>
+                    <p>telefone: </p>
+
+                   
                 </div>
             </div>
+           
         </div>
-
+        <br><br><br>
     </main>
     <footer>
         
