--- a/ecotech2/src/main/resources/static/style.css
+++ b/ecotech2/src/main/resources/static/style.css
@@ -156,6 +156,8 @@ h2{text-align: center; cursor:default}
     padding: 5%; 
     width: 300%; 
     background-color: rgb(236, 236, 236);}
+
+.profile_box input{border-radius: 10px; padding: 7%; width: 300%; margin-bottom: 1%; border:solid rgb(82, 82, 82); cursor: pointer; transition: background-color 0.3s, color 0.3s;}
 .profile_box h1{
     margin-top: -10%;  
    
