--- a/ecotech2/src/main/resources/static/style.css
+++ b/ecotech2/src/main/resources/static/style.css
@@ -63,6 +63,191 @@ h2{text-align: center; cursor:default}
 
 
 
+.dropdown-content {
+    position: absolute;
+    min-width: 260px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    text-align: left;
+    right: 0;
+    background-color: #2e3639;
+    border-radius: 5px;
+    font-size: 12px;
+}
+
+
+
+
+
+   /* Estilo para o menu suspenso */
+   .dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: rgba(22, 21, 21, 0.8); /* Cor de fundo com transparência */
+    backdrop-filter: blur(10px); /* Efeito de vidro fosco */
+    border-radius: 10px;
+    padding: 100%;
+    min-width: 300px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: -10%; /* Alteração para alinhar o menu à direita */
+  
+
+    font-size: 80%;
+    
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Estilo para os itens do menu */
+.dropdown-content a {
+
+    
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+
+/* Estilo para os itens do menu */
+.dropdown-content a {
+    
+    border-color: #2e3639;
+    width: 95%;
+    padding: 12px 16px;
+    text-align: left;
+   
+}
+
+.dropdown-content a:focus {
+    text-decoration: underline;
+}
+
+
+
+
+
+
+
+
+
+
+/*rodape*/
+footer {
+    background-color: #000;
+    color: #fff;
+    padding: 15px 0;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.footer-products, .footer-values {
+    flex: 1;
+    margin-right: 20px;
+}
+
+.footer-products h3, .footer-values h3 {
+    font-size: 30px;
+    margin-bottom: 5px;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+ul li {
+    margin-bottom: 5px;
+}
+
+ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+ul li a:hover {
+    text-decoration: underline;
+}
+
+.footer-section {
+    flex: 1;
+    margin-right: 20px;
+}
+
+.footer-section h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.social-icons, .payment-icons {
+    list-style: none;
+    padding: 0;
+    display: flex;
+}
+
+.social-icons li, .payment-icons li {
+    margin-right: 10px;
+}
+
+.social-icons a, .payment-icons a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 24px;
+}
+
+.payment-icons img {
+    width: 30px;
+    height: auto;
+    margin-right: 10px;
+}
+
+/*rodape inferior*/
+hr {
+    border: 1px solid #fff;
+    margin-top: 20px;
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+}
+
+.footer-left {
+    margin-left: 20px;
+}
+
+.footer-links a {
+    color: #fff;
+    text-decoration: none;
+    margin-right: 300px;
+}
+
+.footer-links a:hover {
+    text-decoration: underline;
+}
+
+/*fim do rodape*/
+
+
+
+
+
+
+
 
 
 
@@ -157,9 +342,9 @@ h2{text-align: center; cursor:default}
     width: 300%; 
     background-color: rgb(236, 236, 236);}
 
-.profile_box input{border-radius: 10px; padding: 7%; width: 300%; margin-bottom: 1%; border:solid rgb(82, 82, 82); cursor: pointer; transition: background-color 0.3s, color 0.3s;}
+.profile_box input[type="text"]{border-radius: 10px; padding: 7%; width: 300%; margin-bottom: 1%; border:solid rgb(82, 82, 82); cursor: pointer; transition: background-color 0.3s, color 0.3s;}
 .profile_box h1{
-    margin-top: -10%;  
+    margin-top: 0%;  
    
 }
 
@@ -168,14 +353,8 @@ h2{text-align: center; cursor:default}
 
 
 
-
-
-
-
-
-
 /*Se for um dispositivo mobile*/
-@media(max-width: 634px){
+@media(max-width: 600px){
     .bordasSuaves{border-radius: 20px; padding: 3%; width: 90%; margin-bottom: 1%; border:solid rgb(82, 82, 82); cursor: pointer; transition: background-color 0.3s, color 0.3s;}
     .regis_box{
         font-size: 120%;
