--- a/ecotech2/src/main/resources/templates/CadastrarCliente.html
+++ b/ecotech2/src/main/resources/templates/CadastrarCliente.html
@@ -9,6 +9,10 @@
     <script src="/javascript.js"></script>
     <link rel="shortcut icon" href="/img/icone.ico">
     <title>Cadastrar</title>
+
+    
+
+
 </head>
 <body>
     <header>
@@ -69,7 +73,56 @@
 
     </main>
     <footer>
-        
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Produtos</h3>
+                <ul>
+                    <li><a href="#">Smartphones</a></li>
+                    <li><a href="#">Notebooks</a></li>
+                    <li><a href="#">Smartwatches e Buds</a></li>
+                    <li><a href="#">Tablets</a></li>
+                    <li><a href="#">Acessórios</a></li>
+                    <li><a href="#">TV e AV</a></li>
+                    <li><a href="#">Eletrodomésticos</a></li>
+                    <li><a href="#">Monitores</a></li>
+                    <li><a href="#">Ar-condicionados</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Suporte</h3>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Fale Conosco</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Redes Sociais</h3>
+                <ul class="social-icons">
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Formas de Pagamento</h3>
+                <ul class="payment-icons">
+                    <img src="../static/img/mastercard.png" alt="Visa">
+                    <img src="../static/img/visa.png" alt="MasterCard">
+                    <img src="../static/img/pix.png" alt="MasterCard">
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <div class="footer-bottom">
+            <div class="footer-left">
+                <p style="font-size: larger;">Brasil</p>
+            </div>
+            <div class="footer-links">
+                <a href="#">Política de Privacidade</a>
+                <a href="#">Termos de Uso</a>
+            </div>               
+        </div>
+        </div>
     </footer>
 </body>
 </html>
