--- a/ecotech2/src/main/resources/templates/EditarPerfil.html
+++ b/ecotech2/src/main/resources/templates/EditarPerfil.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
-    <script src="../static/javascript.js"></script>
-    <link rel="shortcut icon" href="../static/img/icone.ico">
-    <title>Cadastrar</title>
+    <script src="/javascript.js"></script>
+    <link rel="shortcut icon" href="/img/icone.ico">
+    <title>perfil</title>
 </head>
 <body>
     <header>
@@ -23,7 +23,21 @@
             <div class="icons">
                 <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
                 <a href="#"><i class="fa-solid fa-heart"></i></a>
-                <a href="#"><i class="fa-solid fa-bars"></i></a>
+                
+                <div class="dropdown">
+                    <a  class="dropdown-button"><i class="fa-solid fa-bars"></i></a>
+                    <div class="dropdown-content">
+                        <a href="#">Smartphones</a>
+                        <a href="#">Notebooks</a>
+                        <a href="#">Smartwatches e Buds</a>
+                        <a href="#">Tablets</a>
+                        <a href="#">Acessórios</a>
+                        <a href="#">TV e AV</a>
+                        <a href="#">Eletrodomésticos</a>
+                        <a href="#">Monitores</a>
+                        <a href="#">Ar-condicionádos</a>
+                    </div>
+                </div>
     
             </div>
             
@@ -39,6 +53,7 @@
                 
                 <a href="#">Alterar</a><br>
                 <a href="TelaPerfil.html" id="logOut">cancelar</a><br>
+                <a href="ExcluirPerfil.html" id="logOut">Excluir conta</a><br>
             </div>
             <div id="profile_infsBox"> 
                 <h1>Seu perfil</h1>
@@ -49,10 +64,13 @@
                         <input type="text" required placeholder="Cpf" value=""><br><br>
                         <input type="text" required placeholder="Cep" value=""><br><br>
                         <input type="text" required placeholder="Telefone" value=""><br>
+
+                        <br>
+                        
                     </form>
                     <!--Quando estiver programando o value recebe a variavel do usuario atual-->
                     
-
+                    
                    
                 </div>
             </div>
@@ -61,7 +79,56 @@
         <br><br><br>
     </main>
     <footer>
-        
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Produtos</h3>
+                <ul>
+                    <li><a href="#">Smartphones</a></li>
+                    <li><a href="#">Notebooks</a></li>
+                    <li><a href="#">Smartwatches e Buds</a></li>
+                    <li><a href="#">Tablets</a></li>
+                    <li><a href="#">Acessórios</a></li>
+                    <li><a href="#">TV e AV</a></li>
+                    <li><a href="#">Eletrodomésticos</a></li>
+                    <li><a href="#">Monitores</a></li>
+                    <li><a href="#">Ar-condicionados</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Suporte</h3>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Fale Conosco</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Redes Sociais</h3>
+                <ul class="social-icons">
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Formas de Pagamento</h3>
+                <ul class="payment-icons">
+                    <img src="../static/img/mastercard.png" alt="Visa">
+                    <img src="../static/img/visa.png" alt="MasterCard">
+                    <img src="../static/img/pix.png" alt="MasterCard">
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <div class="footer-bottom">
+            <div class="footer-left">
+                <p style="font-size: larger;">Brasil</p>
+            </div>
+            <div class="footer-links">
+                <a href="#">Política de Privacidade</a>
+                <a href="#">Termos de Uso</a>
+            </div>               
+        </div>
+        </div>
     </footer>
 </body>
 </html>
