--- a/ecotech2/src/main/resources/static/style.css
+++ b/ecotech2/src/main/resources/static/style.css
@@ -246,10 +246,55 @@ hr {
 
 
 
+.inicio_fileira{
+    
+    align-items: center;
+    width: 100%;
+    
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    padding: 3%;
+    padding-top: 0;
+    gap: 1%
+}
+.inicio_fileira a{color: #000;padding: 1%; font-size: 200%; margin-left: 4%; transition: color 0.5s, background-color 0.2s, border-radius 0.5s, padding 0.5s;}
+.inicio_fileira a:hover{color: #ffffff; background-color: #2e2e2e;  border-radius: 20px; padding: 1%;}
+
+.inicio_itenContent{
+ 
+
+    background-color: #fff;
+    
+    border: solid  3px rgb(192, 192, 192);
+    border-radius: 10px;
+    padding: 1%;
+
+    width: 15%;
+    transition: width 0.5s, font-size 0.5s;
+}
+.inicio_itenContent img{background-color: #000; width: 100%; border-radius: 5px;}
+.inicio_itenContent p{color:#82AE64; margin: 2%;}
+.inicio_itenContent h3{margin: 2%;}
 
 
+.inicio_itenContent .comprar{
+    background-color: #82AE64;
+    color:aliceblue; 
+    padding: 4%;
+    border-radius: 10px;
+    text-decoration: none;
+    text-align: center;
+    font-size: 120%;
+    transition: background-color 0.3s, color 0.3s;;
+}
 
-
+.inicio_itenContent:hover {width: 17%; font-size: 120%;}
+.inicio_itenContent .comprar:hover{background-color: #717171; padding: 4%;
+    border-radius: 10px;
+    text-decoration: none;
+    text-align: center;
+    font-size: 120%;}
 
 
 
@@ -356,6 +401,7 @@ hr {
 
 
 /*Slideshow da tela inicial*/
+
 /* Slideshow container */
 .slideshow-container {
     width: 100%; /* Largura horizontal de 100% */
