--- a/ecotech2/src/main/resources/templates/index.html
+++ b/ecotech2/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
                         <a href="#">Ar-condicionádos</a>
                     </div>
                 </div>
-    
+                
             </div>
             
         </div>
@@ -47,7 +47,7 @@
     </header>
     <main>
        
-                    <!-- Slideshow container -->
+            <!-- Slideshow -->
             <div class="slideshow-container" >
 
                 <!-- Full-width images with number and caption text -->
@@ -73,14 +73,138 @@
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
-           
-            
-            <!-- The dots/circles -->
+            <!-- circulos  -->
             <div style="text-align:center">
                 <span class="dot" onclick="currentSlide(1)"></span>
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
-            </div> <br> <br>
+            </div>
+            <br>
+            <br>
+
+            <h2>Populares</h2>
+            <div class="inicio_fileira">
+
+                <div class="inicio_itenContent">
+                    <img src="../static/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                </div>
+                <div class="inicio_itenContent">
+                    <img src="../static/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                  
+                    <br>
+                </div>
+                <div class="inicio_itenContent">
+                    <img src="../static/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                  
+                    <br>
+                </div>
+                <div class="inicio_itenContent">
+                    <img src="../static/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                  
+                    <br>
+                </div>
+              
+                <a href="#"><i class="fa-solid fa-chevron-right"></i></a>
+            </div>
+
+            <h2>ofertas</h2>
+            <div class="inicio_fileira">
+
+                <div class="inicio_itenContent">
+                    <img src="../static/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                </div>
+                <div class="inicio_itenContent">
+                    <img src="../static/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                  
+                    <br>
+                </div>
+                <div class="inicio_itenContent">
+                    <img src="../static/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                  
+                    <br>
+                </div>
+                <div class="inicio_itenContent">
+                    <img src="../static/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                  
+                    <br>
+                </div>
+              
+                <a href="#"><i class="fa-solid fa-chevron-right"></i></a>
+            </div>
+
+            <h2>Novidades</h2>
+            <div class="inicio_fileira">
+
+                <div class="inicio_itenContent">
+                    <img src="../static/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                </div>
+                <div class="inicio_itenContent">
+                    <img src="../static/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                  
+                    <br>
+                </div>
+                <div class="inicio_itenContent">
+                    <img src="../static/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                  
+                    <br>
+                </div>
+                <div class="inicio_itenContent">
+                    <img src="../static/img/img1.jpg" alt="">
+                    <h3>Nome produto</h3>
+                    <p>R$00.00</p>
+                    <br>
+                    <a href="" class="comprar">Comprar Agora!</a>
+                  
+                    <br>
+                </div>
+              
+                <a href="#"><i class="fa-solid fa-chevron-right"></i></a>
+            </div>
+
     </main>
     <footer>
         <div class="footer-content">
