senha e login alterados

--- a/ecotech2/src/main/resources/templates/Login.html
+++ b/ecotech2/src/main/resources/templates/Login.html
@@ -16,17 +16,17 @@
 
     </header>
     <main>
-        <div class="container">
-            <div class="login-box"><br>
-                <h2>Insira seu e-mail para se cadastrar ou entrar</h2><br>
-                <form action="processar_login.php" method="post">
+      <br><br><br><br><br><br><br><br><br><br>
+            <div class="login-box"><br><br>
+                <h2>Insira seu e-mail para se cadastrar ou entrar</h2><br><br>
+                <form action="processar_login.php" method="post" class="loginForm">
                     <input type="email" name="email" id="email" placeholder="E-mail" required>
-                    <br><br><br><br>
-                    <button class="continue-login-hover" type="submit">Continuar</button>
-                </form>
+                    <br><br><br><br><br>
+                    <button class="login_button" type="submit">Continuar</button>
+                </form><br><br><br>
             </div>
-        </div>
     </main>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <footer>
         <div class="footer-content">
             <div class="footer-section">
