--- a/ecotech2/src/main/resources/templates/Senha.html
+++ b/ecotech2/src/main/resources/templates/Senha.html
@@ -10,15 +10,15 @@
     <link rel="shortcut icon" href="../static/img/icone.ico">
     <title>Senha</title>
 </head>
-<body onload="plusSlides(0)">
+<body>
     <header>
         <div class="header_green"> <a href="#">Seja bem vindo de volta <i>nome usuário</i></a> </div>
 
     </header>
-    <main>
+    <main><br><br><br><br><br><br><br><br>
         <div class="container">
-            <div class="login-box"><br>
-                <h2>Insira sua senha</h2><br>
+            <div class="login-box"><br><br>
+                <h2>Insira sua senha</h2><br><br>
                 <form action="processar_login.php" method="post">
                     <div class="password-input">
                         <input type="password" name="senha" id="senha" placeholder="Senha" required>
@@ -28,9 +28,9 @@
                     </div>
                     <br><br><br><br>
                     <button class="continue-senha-hover" type="submit">Continuar</button>
-                </form>
+                </form><br><br>
             </div>
-        </div>
+        </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </main>
     <script>
     function togglePasswordVisibility() {
