--- a/ecotech2/src/main/resources/static/style.css
+++ b/ecotech2/src/main/resources/static/style.css
@@ -153,19 +153,12 @@ h2{text-align: center; cursor:default}
 }
 
 
-
-
-
-
-
-
-
-
 /*rodape*/
 footer {
     background-color: #000;
     color: #fff;
-    padding: 15px 0;
+    padding: 15px 0px;
+    
 }
 
 .footer-content {
@@ -524,49 +517,63 @@ hr {
 
 
 /*__ Login __*/
+.login-box {
+    font-size: 120%;
+
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    width: 50%; 
+    padding: 1%; 
+    border:solid rgb(121, 122, 122);
+
+    margin-top: 100%;
+    margin: 0 auto; /* Define as margens automáticas horizontalmente */
+    text-align: center; /* Opcional: centraliza o conteúdo dentro da div */
+}
+
 .login-box h2 {
     margin-top: 0;
 }
 
-.login-box input[type="email"] {
-    width: 20%;
-    position: absolute;
-    left: 39%;
-    padding: 9px;
-    margin-bottom: 25px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
 
 .login-box button {
+    margin: 0 auto;
     background-color: #161616; /* Cor de fundo do botão */
-    color: #fff; /* Cor do texto do botão */
+    color: #fff;
+    left: 48%;
     border: none;
-    padding: 10px 20px;
+    padding: 15px 40px;
     border-radius: 5px;
     cursor: pointer;
+    margin: 0 auto;
 }
 
-.password-input input[type="password"] {
-    border-radius: 5px;
+.loginForm input {
+    border-radius: 10px; padding: 1%; width: 40% ; margin-bottom: 1%; border:solid rgb(82, 82, 82); cursor: pointer; transition: background-color 0.3s, color 0.3s;
+
+
 }
-.password-input input[type="password"]:focus {
+
+.loginForm input:focus {
     border-color: #82AE64;
     box-shadow: 0 0 5px rgba(130, 174, 100, 0.5);
+}
+
+.senha{
+    border-radius: 10px; padding: 1%; width: 40% ; margin-bottom: 1%; border:solid rgb(82, 82, 82); cursor: pointer; transition: background-color 0.3s, color 0.3s;
 }
 
 .password-input .toggle-password:hover {
     color: #82AE64;
     border-radius: 5px;
+    
 }
 
-.continue-login-hover:hover {
+.login_button:hover {
     background-color:#313131;
 }
 
-.continue-senha-hover:hover {
-    background-color:#313131;
-}
+
 
 
 
