--- a/ecotech2/src/main/resources/templates/EsqueciSenha2.html
+++ b/ecotech2/src/main/resources/templates/EsqueciSenha2.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
     <script src="../static/javascript.js"></script>
     <link rel="shortcut icon" href="../static/img/icone.ico">
-    <title>Senha</title>
+    <title>EsqueciSenha</title>
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
     <main><br><br><br><br><br><br><br><br>
         <div class="container">
             <div class="login-box"><br><br>
-                <h2>Insira sua senha</h2><br><br>
+                <h2>Insira sua nova senha</h2><br><br>
                 <form action="processar_login.php" method="post">
                     <div class="password-input">
                         <input type="password" name="senha" id="senha" placeholder="Senha" required>
@@ -27,7 +27,15 @@
                         </span>
                     </div>
                     <br><br><br><br>
-                    <button class="continue-senha-hover" type="submit">Continuar</button>
+                    <a href="Login.html" style="margin: 0 auto;
+                    background-color: #161616; /* Cor de fundo do botão */
+                    color: #fff;
+                    left: 48%;
+                    border: none;
+                    padding: 15px 40px;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    margin: 0 auto; text-decoration: none" class="esqueci-senha">Continuar</a>
                 </form><br><br>
             </div>
         </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
