--- a/ecotech2/src/main/resources/templates/busca.html
+++ b/ecotech2/src/main/resources/templates/busca.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <header>
-        <div class="header_green"> <a href="#">Seja bem vindo de volta <i>nome usuário</i></a> </div>
+        <div class="header_green"> <a href="/ecotech/cliente/perfil">Perfil</a> </div>
         <div class="header_black">
             <img src="/img/echoTech2.png" id="logo">
             <form>
