--- a/ecotech2/src/main/resources/templates/index.html
+++ b/ecotech2/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 </head>
 <body onload="plusSlides(0)">
     <header>
-        <div class="header_green"> <a href="#">Seja bem vindo de volta <i>nome usuário</i></a> </div>
+        <div class="header_green"> <a href="/ecotech/cliente/perfil">Perfil</a> </div>
         <div class="header_black">
             <img src="/img/echoTech2.png" id="logo">
             <form>
