--- a/ecotech2/src/main/resources/templates/CadastrarCliente.html
+++ b/ecotech2/src/main/resources/templates/CadastrarCliente.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="header_green"> <a href="#">Home</a> </div>
+        <div class="header_green"> <a th:href="@{/ecotech/cliente/index}">Home</a> </div>
         
     </header>
     <main>
