--- a/ecotech2/src/main/resources/templates/EsqueciSenha.html
+++ b/ecotech2/src/main/resources/templates/EsqueciSenha.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="/style.css">
     <script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
-    <script src="../static/javascript.js"></script>
-    <link rel="shortcut icon" href="../static/img/icone.ico">
+    <script src="/javascript.js"></script>
+    <link rel="shortcut icon" href="/img/icone.ico">
     <title>Esqueci minha senha</title>
 </head>
 <body>
@@ -85,9 +85,9 @@
             <div class="footer-section">
                 <h3>Formas de Pagamento</h3>
                 <ul class="payment-icons">
-                    <img src="../static/img/mastercard.png" alt="Visa">
-                    <img src="../static/img/visa.png" alt="MasterCard">
-                    <img src="../static/img/pix.png" alt="MasterCard">
+                    <img src="/img/mastercard.png" alt="Visa">
+                    <img src="/img/visa.png" alt="MasterCard">
+                    <img src="/img/pix.png" alt="MasterCard">
                 </ul>
             </div>
         </div>
