--- a/ecotech2/src/main/resources/templates/busca.html
+++ b/ecotech2/src/main/resources/templates/busca.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="shortcut icon" href="/img/icone.ico">
     <script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
     <script src="/javascript.js"></script>
@@ -70,22 +70,22 @@
         <br><h2>Você pesquisou por: ******</h2><br><br><br><br>
         <div class="searchProduct-list">
             <div class="search_itenContent">
-                <img src="..\static\img\img3.jpg" alt="Produto 1" class="product-image">
+                <img src="\img\img3.jpg" alt="Produto 1" class="product-image">
                 <p>Produto 1</p>
                <a href="#" class="view-button">Visualizar Produto</a>    
             </div><br>
             <div class="search_itenContent">
-                <img src="..\static\img\img3.jpg" alt="Produto 2" class="product-image">
+                <img src="\img3.jpg" alt="Produto 2" class="product-image">
                 <p>Produto 2</p>
                 <a href="#" class="view-button">Visualizar Produto</a>  
             </div><br>
             <div class="search_itenContent">
-                <img src="..\static\img\img3.jpg" alt="Produto 3" class="product-image">
+                <img src="\img3.jpg" alt="Produto 3" class="product-image">
                 <p>Produto 3</p>
                 <a href="#" class="view-button">Visualizar Produto</a>  
             </div><br>
             <div class="search_itenContent">
-                <img src="..\static\img\img3.jpg" alt="Produto 4" class="product-image">
+                <img src="\img3.jpg" alt="Produto 4" class="product-image">
                 <p>Produto 4</p>
                 <a href="#" class="view-button">Visualizar Produto</a>  
             </div>
@@ -141,9 +141,9 @@
             <div class="footer-section">
                 <h3>Formas de Pagamento</h3>
                 <ul class="payment-icons">
-                    <img src="../static/img/mastercard.png" alt="Visa">
-                    <img src="../static/img/visa.png" alt="MasterCard">
-                    <img src="../static/img/pix.png" alt="MasterCard">
+                    <img src="/img/mastercard.png" alt="Visa">
+                    <img src="/img/visa.png" alt="MasterCard">
+                    <img src="/img/pix.png" alt="MasterCard">
                 </ul>
             </div>
         </div>
