--- a/ecotech2/src/main/resources/templates/ListaFavoritos.html
+++ b/ecotech2/src/main/resources/templates/ListaFavoritos.html
@@ -8,7 +8,7 @@
     <script src="/javascript.js"></script>
     <link rel="shortcut icon" href="icone.ico">
     <title>Carrinho de Compras</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
