--- a/ecotech2/src/main/resources/templates/Login.html
+++ b/ecotech2/src/main/resources/templates/Login.html
@@ -105,9 +105,9 @@
             <div class="footer-section">
                 <h3>Formas de Pagamento</h3>
                 <ul class="payment-icons">
-                    <img src="../static/img/mastercard.png" alt="Visa">
-                    <img src="../static/img/visa.png" alt="MasterCard">
-                    <img src="../static/img/pix.png" alt="MasterCard">
+                    <img src="/img/mastercard.png" alt="Visa">
+                    <img src="/img/visa.png" alt="MasterCard">
+                    <img src="/img/pix.png" alt="MasterCard">
                 </ul>
             </div>
         </div>
