--- a/ecotech2/src/main/resources/templates/TelaPerfil.html
+++ b/ecotech2/src/main/resources/templates/TelaPerfil.html
@@ -102,10 +102,11 @@
             </div>
             <div class="footer-section">
                 <h3>Formas de Pagamento</h3>
-                <ul class="payment-icons">
-                    <img src="../static/img/mastercard.png" alt="Visa">
-                    <img src="../static/img/visa.png" alt="MasterCard">
-                    <img src="../static/img/pix.png" alt="MasterCard">
+              <ul class="payment-icons">
+                    <img src="/img/mastercard.png" alt="Visa">
+                    <img src="/img/visa.png" alt="MasterCard">
+                    <img src="/img/pix.png" alt="MasterCard">
+                </ul>
                 </ul>
             </div>
         </div>
