--- a/ecotech2/src/main/resources/static/style.css
+++ b/ecotech2/src/main/resources/static/style.css
@@ -913,7 +913,7 @@ aside .box .info > div:last-child {
 }
 
 aside .box .info button {
-  color: #28a745;
+  color: #82AE64;
   background: transparent;
   border: 0;
   display: -webkit-box;
@@ -925,7 +925,12 @@ aside .box .info button {
   font-size: 16px;
 }
 
+aside .box .info button:hover {
+  color:#3f9d00;
+}
+
 aside .box footer {
+  border-radius: 5px;
   padding: 15px 20px;
   background: #ddd;
   font-size: 18px;
@@ -938,10 +943,11 @@ aside .box footer {
 }
 
 aside > button {
+  border-radius: 5px;
   border: 0;
   padding: 15px 0;
   color: white;
-  background: #28a745;
+  background: #82AE64;
   display: block;
   width: 100%;
   text-transform: uppercase;
@@ -950,6 +956,6 @@ aside > button {
 }
 
 aside > button:hover {
-  background: #3bc55b;
+  background: #73b646;
 }
 /*# sourceMappingURL=styles.css.map */
