--- a/ecotech2/src/main/resources/templates/Carrinho.html
+++ b/ecotech2/src/main/resources/templates/Carrinho.html
@@ -50,7 +50,7 @@
 
     </header>
     <main>
-      <div class="page-title">Lista de Favoritos</div>
+      <div class="page-title">Seu Carrinho</div>
       <div class="content">
         <section>
           <table>
@@ -137,7 +137,7 @@
           </table>
         </section>
         <aside>
-          <div class="box">
+          <div class="box" style="border-radius: 5px;">
             <header>Resumo da compra</header>
             <div class="info">
               <div><span>Sub-total</span><span>R$ 418</span></div>
@@ -158,5 +158,57 @@
         </aside>
       </div>
     </main>
+    <footer>
+      <div class="footer-content">
+          <div class="footer-section">
+              <h3>Produtos</h3>
+              <ul>
+                  <li><a href="#">Smartphones</a></li>
+                  <li><a href="#">Notebooks</a></li>
+                  <li><a href="#">Smartwatches e Buds</a></li>
+                  <li><a href="#">Tablets</a></li>
+                  <li><a href="#">Acessórios</a></li>
+                  <li><a href="#">TV e AV</a></li>
+                  <li><a href="#">Eletrodomésticos</a></li>
+                  <li><a href="#">Monitores</a></li>
+                  <li><a href="#">Ar-condicionados</a></li>
+              </ul>
+          </div>
+          <div class="footer-section">
+              <h3>Suporte</h3>
+              <ul>
+                  <li><a href="#">FAQ</a></li>
+                  <li><a href="#">Fale Conosco</a></li>
+              </ul>
+          </div>
+          <div class="footer-section">
+              <h3>Redes Sociais</h3>
+              <ul class="social-icons">
+                  <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                  <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                  <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+              </ul>
+          </div>
+          <div class="footer-section">
+              <h3>Formas de Pagamento</h3>
+              <ul class="payment-icons">
+                  <img src="/img/mastercard.png" alt="Visa">
+                  <img src="/img/visa.png" alt="MasterCard">
+                  <img src="/img/pix.png" alt="MasterCard">
+              </ul>
+          </div>
+      </div>
+      <hr>
+      <div class="footer-bottom">
+          <div class="footer-left">
+              <p style="font-size: larger;">Brasil</p>
+          </div>
+          <div class="footer-links">
+              <a href="#">Política de Privacidade</a>
+              <a href="#">Termos de Uso</a>
+          </div>               
+      </div>
+      </div>
+  </footer>
   </body>
 </html>
